votingapp/k8s-manifests/result/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: result
status:
  loadBalancer: {}
